--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,6 +6,10 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.header {
+    flex-direction: column;
+}
+
 #google {
     margin-left: 30px;
 }
@@ -28,6 +32,11 @@ body {
     margin-left: 40px;
 }
 
+.search-bar:hover, .search-bar:focus-within {
+    box-shadow: 0 1px 6px 0 rgba(32,33,36,0.28);
+    border-color: rgba(223,225,229,0);
+}
+
 .search-bar input {
     flex: 1;
     display: flex;
@@ -44,4 +53,120 @@ body {
     flex: 100%;
     -webkit-tap-highlight-color: transparent;
     font-size: 16px;
+}
+
+#sign-in {
+    margin-right: 30px;
+}
+
+#sign-in-button {
+    border:0px solid #0e63f0; -webkit-border-radius: 3px; -moz-border-radius: 3px;border-radius: 3px;font-size:12px;font-family:arial, helvetica, sans-serif; padding: 10px 10px 10px 10px; text-decoration:none; display:inline-block;text-shadow: -1px -1px 0 rgba(0,0,0,0.3);font-weight:bold; color: #FFFFFF !important;
+    background-color: #4285F4; background-image: -webkit-gradient(linear, left top, left bottom, from(#4285F4), to(#4683EA));
+    background-image: -webkit-linear-gradient(top, #4285F4, #4683EA);
+    background-image: -moz-linear-gradient(top, #4285F4, #4683EA);
+    background-image: -ms-linear-gradient(top, #4285F4, #4683EA);
+    background-image: -o-linear-gradient(top, #4285F4, #4683EA);
+    background-image: linear-gradient(to bottom, #4285F4, #4683EA);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#4285F4, endColorstr=#4683EA);
+    
+
+}
+
+#sign-in-button:hover {
+    border:0px solid #0b51c5;
+    background-color: #1266f1; background-image: -webkit-gradient(linear, left top, left bottom, from(#1266f1), to(#1a65e3));
+    background-image: -webkit-linear-gradient(top, #1266f1, #1a65e3);
+    background-image: -moz-linear-gradient(top, #1266f1, #1a65e3);
+    background-image: -ms-linear-gradient(top, #1266f1, #1a65e3);
+    background-image: -o-linear-gradient(top, #1266f1, #1a65e3);
+    background-image: linear-gradient(to bottom, #1266f1, #1a65e3);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#1266f1, endColorstr=#1a65e3);
+}
+
+#search-button {
+    color: #1A73E8;
+    border-radius: 24px;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    height: 34px;
+    padding: 0 15px;
+}
+
+#search-button:hover {
+    background-color: #e8f0fe;
+    outline: none;
+}
+
+#button {
+    padding: 0 5px;
+    margin: auto;
+}
+
+#search-button:focus {
+    outline: none;
+}
+
+.navigation {
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.navbar {
+    margin: 10px auto auto 162px;
+    display: flex;
+    align-items: center;
+    width: 638px;
+    position: relative;
+}
+
+#left {
+    margin: auto auto auto 10px;
+    position: relative;
+}
+
+#right {
+    margin: auto 10px auto auto;
+    position: relative;
+}
+
+#left a {
+    padding: 4px 12px 4px 10px;
+    text-decoration: none;
+    color: #5f6368;
+}
+
+#right a {
+    padding: 4px 12px 4px 10px;
+    text-decoration: none;
+    color: #5f6368;
+}
+
+
+
+#left, #right {
+    font-size: 13px;
+    
+}
+
+#left a:first-child {
+    border-bottom: 3px solid #1a73e8;
+    color: #1a73e8;
+    padding-bottom: 10px;
+    font-weight: bold;
+}
+
+.navbar a:visited {
+    color: inherit;
+}
+
+#right a:last-child {
+    border: 1px solid transparent;
+    border-radius: 2px;
+}
+
+#right a:last-child:hover {
+    border: 1px solid #d7d7d7;
+    background: -webkit-linear-gradient(top, #eee, #e0e0e0);
+    box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, 0.1);
 }
